--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Realtime Chat App</title>
+    <meta name="description" content="ZA Chat - A modern, real-time chat application built by Zaid Akbar. Connect with friends and family with secure, instant messaging." />
+    <meta name="keywords" content="chat, messaging, real-time, Zaid Akbar, ZA Chat, communication" />
+    <meta name="author" content="Zaid Akbar" />
+    <title>ZA Chat - Real-time Messaging by Zaid Akbar</title>
   </head>
   <body>
     <div id="root"></div>
